refactor login documentation
